# instagger

./: .gitignore  README.md  add_tags_to_name.py  pyproject.toml
tasks/: core.py
tasks/data/: cameras.py  lenses.py
